--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,19 +1,13 @@
-:root {
+html, body, #root {
   width: 100%;
-  max-width: none;
+  height: 100%;
   margin: 0;
-  padding: 0;   
+  padding: 0;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+#root {
+  max-width: none;
 }
-a:hover {
-  color: #535bf2;
-}
-
 
 html, body {
   margin: 0;
