--- a/frontend/src/styles/Navbar.css
+++ b/frontend/src/styles/Navbar.css
@@ -1,11 +1,11 @@
-/* Navbar container styling and customization */
+/* Navbar contain
+er styling and customization */
 .navbar {
     box-sizing: border-box;
     width: 100%; 
     height: 64px;
     padding: 0 2rem;
     background-color: #0a0a0a;
-    border-bottom: 1px solid rgba(212, 175, 55, 0.25);
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -13,7 +13,8 @@
 
 /* Logo image styling for the size */
 .logo-image {
-    height: 45px;
+    margin-top: 8px;
+    height: 50px;
     width: 65px;
 }
 
@@ -29,4 +30,13 @@
     color: #b07a63;
     font-size: 0.95rem;
     opacity: 0.95;
+}
+
+/* This is for the navbar links and changes the color */
+.navbar a {
+  color: #b07a63;
+}
+
+.navbar a:hover {
+  color: #d1a88f;
 }
